opacity and rotate

--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
         LettersRandomPlaces({
             element: ".animated__text",
             start_delay_time: 250,	//default 1000
-            delay_type: "sequential",	//default sequential
+            delay_type: "random",	//default sequential
             animation_duration: 2000,	//default 250
             force: 100,	//default 300
             direction: ['x', 'y'],	//default ['x', 'y']
             random_scale: true,	//default false
+            rotate: -1
         })
 
         // WordsRandomPlaces({
@@ -48,6 +49,7 @@
         //     force: 200,	//default 300
         //     direction: ['x', 'y'],	//default ['x', 'y']
         //     random_scale: true,	//default false
+        //     rotate: -1
         // })
 
     </script>
